2006-10-17  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: option to control treatment of non-ascii characters
	"set term svg raw" - pass them through unaltered
	"set term svg escaped" - replace byte-by-byte with &#xNN;

	* configure.in: Print a warning if snprintf() is not found during auto-
	configuration. Recommend that the user provide snprintf() via an
	external version.

2006-10-15  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm: Switch to Unicode-compatible representation of octal
	characters given as \xxx in a single-quoted test string.
	Bug #1534649

2006-10-14  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm (SVG_options): Do not reset terminal options to default
	values if invoked from `set termoption` rather than `set terminal`.
	Bug #1534649

2006-10-13  Ethan Merritt  <merritt@u.washington.edu>

	* demo/rgb_variable.dem: Some platforms do not allow you to read a
	hexadecimal constant via strtod(). This prevents reading RGB colors as
	hexadecimal constants. Add a test for this, and print a warning.
	Bug #1574814

	* term/gplt_x11.c: Place #ifdef HAVE_STRDUP protection around a code
	section that uses it to send signals to the KDE konsole.
	Older systems may not provide strdup(), but they also don't run KDE.
	Even if they did, the code in question is hardly a required feature.
	Fixes compile problem on Ultrix.

2006-10-12  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Replace -rc1 svg driver with the version from cvs
	12 Oct 2006.  This changes the handling of escaped characters and
	characters given as octal constants.  Bug #1575007

2006-10-12  Daniel Sebald  <daniel.sebald@ieee.org>

	* docs/gnuplot.doc: Small corrections.

	* term/post.trm (PS_encode_image): Added gamma correction for images
	using a PostScript transfer function. SF Patch [1575425].

2006-10-11  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c (test_palette_subcommand): Fixed order of set tics
	commands.
