@@ -1,3 +1,8 @@
+2006-10-20  Bernhard Simon
+
+	* src/colorc (make_palette): Add missing stderr parameter in 
+	FPRINTF debugging statements.
+
 2006-10-17  Ethan Merritt  <merritt@u.washington.edu>
 
 	* term/svg.trm: option to control treatment of non-ascii characters
